# neurodesign

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  conf.py  pyproject.toml  setup.py  tox.ini
.github/: codespell_ignore_words.txt
.github/workflows/: black.yml  codespell.yml  flake8.yml  isort.yml  run_examples.yml  run_precommit.yml  test_notebook.yml  tests.yml  update_precommit_hooks.yml
docs/: Makefile  conf.py  contents.rst  genalg.rst  getting_started.rst  index.rst  requirements.readthedocs.txt
docs/_static/: default.css
docs/_templates/: layout.html
docs/source/: conf.py  index.rst  neurodesign.rst
examples/: DesignOptPaper.ipynb  JSS_example.py  compare_designs.py  comparedesigns.py  comparison_neurodesign.html  comparison_neurodesign.ipynb  comparison_neurodesign.py  optimisation.py  paper.py  test.py  tutorial.py
neurodesign/: __init__.py  _version.py  classes.py  generate.py  info.py  msequence.py  report.py
neurodesign/src/: __init__.py  neurodesign.py  report.py
source/: 0.0.12  CHANGES.md  conf.py  requirements.txt  setup.py
source/src/: __init__.py  conf.py  generate.py  geneticalgorithm.py  info.py  msequence.py  neurodesign.py  report.py
tests/: __init__.py  conftest.py  test_classes.py  test_generate.py  test_msequence.py  test_report.py
